Working title screen

--- a/Player.vm
+++ b/Player.vm
@@ -1,58 +1,459 @@
 function Player.new 0
-    push constant 2
+    push constant 14
     call Memory.alloc 1
     pop pointer 0
     push argument 0
+    pop this 5
     push argument 1
-    call GameObject.new 2
-    pop this 0
+    pop this 6
     push constant 5
     pop static 0
+    push constant 0
+    pop this 9
+    push constant 0
+    pop this 10
+    push constant 0
+    pop this 11
+    push constant 0
+    pop this 12
+    push constant 0
+    pop this 13
     push pointer 0
     return
-function Player.move 0
+function Player.getGravity 0
     push argument 0
     pop pointer 0
-    push this 0
-    push static 0
+    push this 9
+    return
+function Player.setGravity 0
+    push argument 0
+    pop pointer 0
     push argument 1
-    call Math.multiply 2
-    push static 0
-    push argument 2
-    call Math.multiply 2
-    call GameObject.move 3
-    pop temp 0
+    pop this 9
     push constant 0
     return
-function Player.draw 2
+function Player.getJump 0
     push argument 0
     pop pointer 0
+    push this 13
+    return
+function Player.setJump 0
+    push argument 0
+    pop pointer 0
+    push argument 1
+    pop this 13
+    push constant 0
+    return
+function Player.getJumpLoop 0
+    push argument 0
+    pop pointer 0
+    push this 10
+    return
+function Player.setJumpLoop 0
+    push argument 0
+    pop pointer 0
+    push argument 1
+    pop this 10
+    push constant 0
+    return
+function Player.getNumber 0
+    push argument 0
+    pop pointer 0
+    push this 11
+    return
+function Player.setNumber 0
+    push argument 0
+    pop pointer 0
+    push argument 1
+    pop this 11
+    push constant 0
+    return
+function Player.getTick 0
+    push argument 0
+    pop pointer 0
+    push this 12
+    return
+function Player.setTick 0
+    push argument 0
+    pop pointer 0
+    push argument 1
+    pop this 12
+    push constant 0
+    return
+function Player.getDir 0
+    push argument 0
+    pop pointer 0
+    push this 4
+    return
+function Player.setDir 0
+    push argument 0
+    pop pointer 0
+    push argument 1
+    pop this 4
+    push constant 0
+    return
+function Player.move 1
+    push argument 0
+    pop pointer 0
+    push this 5
+    pop this 7
+    push this 6
+    pop this 8
+    push this 5
+    push argument 1
+    add
+    pop this 5
+    push pointer 0
+    push argument 3
+    call Player.collides 2
+    pop local 0
+    push local 0
+    push constant 1
+    neg
+    eq
+    not
+    if-goto Player_1
+    push this 7
+    pop this 5
+    goto Player_0
+label Player_1
+label Player_0
+    push this 6
+    push argument 2
+    add
+    pop this 6
+    push pointer 0
+    push argument 3
+    call Player.collides 2
+    pop local 0
+    push local 0
+    push constant 1
+    neg
+    eq
+    not
+    if-goto Player_3
+    push this 8
+    pop this 6
+    goto Player_2
+label Player_3
+label Player_2
+    push constant 0
+    call Screen.setColor 1
+    pop temp 0
+    push this 7
+    push this 8
+    push this 7
+    push constant 7
+    add
+    push this 8
+    push constant 7
+    add
+    call Screen.drawRectangle 4
+    pop temp 0
     push constant 1
     neg
     call Screen.setColor 1
     pop temp 0
-    push this 0
-    call GameObject.getX 1
-    pop local 0
-    push this 0
-    call GameObject.getY 1
-    pop local 1
-    push local 0
-    push local 1
-    push local 0
-    push constant 8
+    push this 5
+    push this 6
+    push this 5
+    push constant 7
     add
-    push local 1
-    push constant 8
+    push this 6
+    push constant 7
     add
     call Screen.drawRectangle 4
     pop temp 0
     push constant 0
     return
-function Player.getParent 0
+function Player.draw 0
     push argument 0
     pop pointer 0
-    push this 0
+    push constant 0
+    call Screen.setColor 1
+    pop temp 0
+    push this 7
+    push this 8
+    push this 7
+    push constant 7
+    add
+    push this 8
+    push constant 7
+    add
+    call Screen.drawRectangle 4
+    pop temp 0
+    push constant 1
+    neg
+    call Screen.setColor 1
+    pop temp 0
+    push this 5
+    push this 6
+    push this 5
+    push constant 7
+    add
+    push this 6
+    push constant 7
+    add
+    call Screen.drawRectangle 4
+    pop temp 0
+    push constant 0
+    return
+function Player.isOnGround 2
+    push argument 0
+    pop pointer 0
+    push this 6
+    pop local 1
+    push this 6
+    push constant 1
+    add
+    pop this 6
+    push pointer 0
+    push argument 1
+    call Player.collides 2
+    pop local 0
+    push local 1
+    pop this 6
+    push local 0
+    return
+function Player.hitsCieling 2
+    push argument 0
+    pop pointer 0
+    push this 6
+    pop local 1
+    push this 6
+    push constant 1
+    sub
+    pop this 6
+    push pointer 0
+    push argument 1
+    call Player.collides 2
+    pop local 0
+    push local 1
+    pop this 6
+    push local 0
+    return
+function Player.collides 4
+    push argument 0
+    pop pointer 0
+    push this 6
+    push constant 8
+    call Math.divide 2
+    pop local 0
+    push this 5
+    push constant 8
+    call Math.divide 2
+    pop local 1
+    push argument 1
+    push local 0
+    push local 1
+    call GameMap.getTileAtBlock 3
+    pop local 2
+    push local 2
+    push constant 0
+    eq
+    not
+    not
+    if-goto Player_5
+    push local 2
+    push constant 2
+    eq
+    not
+    if-goto Player_7
+    push constant 1
+    neg
+    pop this 2
+    goto Player_6
+label Player_7
+label Player_6
+    push local 2
+    push constant 3
+    eq
+    not
+    if-goto Player_9
+    push constant 1
+    neg
+    pop this 1
+    goto Player_8
+label Player_9
+label Player_8
+    push constant 1
+    neg
+    return
+    goto Player_4
+label Player_5
+label Player_4
+    push this 6
+    push constant 8
+    call Math.divide 2
+    pop local 0
+    push this 5
+    push constant 7
+    add
+    push constant 8
+    call Math.divide 2
+    pop local 1
+    push argument 1
+    push local 0
+    push local 1
+    call GameMap.getTileAtBlock 3
+    pop local 2
+    push local 2
+    push constant 0
+    eq
+    not
+    not
+    if-goto Player_11
+    push local 2
+    push constant 2
+    eq
+    not
+    if-goto Player_13
+    push constant 1
+    neg
+    pop this 2
+    goto Player_12
+label Player_13
+label Player_12
+    push local 2
+    push constant 3
+    eq
+    not
+    if-goto Player_15
+    push constant 1
+    neg
+    pop this 1
+    goto Player_14
+label Player_15
+label Player_14
+    push constant 1
+    neg
+    return
+    goto Player_10
+label Player_11
+label Player_10
+    push this 6
+    push constant 7
+    add
+    push constant 8
+    call Math.divide 2
+    pop local 0
+    push this 5
+    push constant 8
+    call Math.divide 2
+    pop local 1
+    push argument 1
+    push local 0
+    push local 1
+    call GameMap.getTileAtBlock 3
+    pop local 2
+    push local 2
+    push constant 0
+    eq
+    not
+    not
+    if-goto Player_17
+    push local 2
+    push constant 2
+    eq
+    not
+    if-goto Player_19
+    push constant 1
+    neg
+    pop this 2
+    goto Player_18
+label Player_19
+label Player_18
+    push local 2
+    push constant 3
+    eq
+    not
+    if-goto Player_21
+    push constant 1
+    neg
+    pop this 1
+    goto Player_20
+label Player_21
+label Player_20
+    push constant 1
+    neg
+    return
+    goto Player_16
+label Player_17
+label Player_16
+    push this 6
+    push constant 7
+    add
+    push constant 8
+    call Math.divide 2
+    pop local 0
+    push this 5
+    push constant 7
+    add
+    push constant 8
+    call Math.divide 2
+    pop local 1
+    push argument 1
+    push local 0
+    push local 1
+    call GameMap.getTileAtBlock 3
+    pop local 2
+    push local 2
+    push constant 0
+    eq
+    not
+    not
+    if-goto Player_23
+    push local 2
+    push constant 2
+    eq
+    not
+    if-goto Player_25
+    push constant 1
+    neg
+    pop this 2
+    goto Player_24
+label Player_25
+label Player_24
+    push local 2
+    push constant 3
+    eq
+    not
+    if-goto Player_27
+    push constant 1
+    neg
+    pop this 1
+    goto Player_26
+label Player_27
+label Player_26
+    push constant 1
+    neg
+    return
+    goto Player_22
+label Player_23
+label Player_22
+    push constant 0
+    return
+function Player.won 0
+    push argument 0
+    pop pointer 0
+    push this 1
+    return
+function Player.died 0
+    push argument 0
+    pop pointer 0
+    push this 2
+    return
+function Player.hasKey 0
+    push argument 0
+    pop pointer 0
+    push this 3
+    return
+function Player.newLife 0
+    push argument 0
+    pop pointer 0
+    push constant 0
+    pop this 2
+    push constant 0
     return
 function Player.instanceof 0
     push argument 0
